[package]
edition = "2024"
name = "async-dma"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "async-dma"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.9.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"
esp-println = { version = "0.16.1", default-features = false, features = [
  "esp32c3",
  "uart",
  "colors",
  "critical-section",
] }

sdspi = { version = "0.1.0", path = "sdspi" }
aligned = "0.4.2"
block-device-adapters = { version = "0.2.0", path = "block-device-adapters" }
embedded-fatfs = { version = "0.1.0", path = "embedded-fatfs", default-features = false }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
